--- a/geo/package.json
+++ b/geo/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.11.0",
     "@react-google-maps/api": "^2.20.5",
+    "convex": "^1.18.2",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
