--- a/geo/package.json
+++ b/geo/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.11.0",
     "@react-google-maps/api": "^2.20.5",
     "convex": "^1.18.2",
+    "framer-motion": "^12.3.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
